--- a/huhuhux-framework/pom.xml
+++ b/huhuhux-framework/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>[7.7.0, 7.10.99]</version>
+        </dependency>
 
     </dependencies>
 
